--- a/app.json
+++ b/app.json
@@ -1,5 +1,5 @@
 {
-  "name": "Discord Music Bot",
+  "name": "Discord Music Bot by p01s0N",
   "repository": "https://github.com/death-angel-141/Discord-Music-Bot.git",
   "env": {
       "BOT_TOKEN": {
